# MolInspect

./: .gitattributes  .gitignore  README.md  llms.txt  pyproject.toml
docs/: API_NOTATION.md  API_SPEC.md  APPLICATIONS.md  USAGE.md
examples/: real_pdb_usage.py
examples/data/: README.md
schemas/: output_schemas.json
scripts/: check_render_artifacts.py  fetch_example_pdbs.py  generate_output_schemas.py  render_example_pdbs.py  render_example_pdbs_pymol.py
src/molinspect/: __init__.py  annotations.py  bonds.py  errors.py  landmarks.py  loaders.py  metrics.py  notation.py  objects.py  relations.py  schemas.py  selections.py  session.py  world.py
src/molinspect/backends/: __init__.py  annotations.py  common.py  interactions.py  interfaces.py  pockets.py  registry.py  temporal.py
src/molinspect/definitions/: __init__.py  registry.py
src/molinspect/inspection/: __init__.py  compare.py  events.py  scales.py  static.py  summaries.py  temporal.py  timeline_specs.py  validation.py
tests/: __init__.py  conftest.py  helpers.py  helpers_static_spatial.py
tests/core/: test_load_static.py  test_load_trajectory.py  test_objects.py  test_selection.py
tests/definitions/: test_backend_integrations.py  test_structural_definitions.py
tests/evaluation/: test_external_static_evaluation.py
tests/inspection/: test_chemical_relations.py  test_locate_context.py  test_structural_identity.py  test_structural_landmarks.py  test_temporal_understanding.py  test_timeline_compare.py
tests/integration/: test_real_pdb_examples.py
