[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molinspect"
version = "0.0.1"
description = "Python toolkit for protein structure, ligand-binding-site, interface, and molecular trajectory inspection"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
  "bioinformatics",
  "computational biology",
  "structural biology",
  "protein structure",
  "protein engineering",
  "molecular dynamics",
  "trajectory analysis",
  "PDB",
  "mmCIF",
  "MDAnalysis",
  "ligand binding site",
  "protein ligand interactions",
  "protein protein interface",
  "RMSD",
  "RMSF",
  "LLM agents",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pydantic>=2.0",
  "MDAnalysis>=2.6",
  "freesasa>=2.2",
  "pdbe-arpeggio>=1.4.4",
  "openbabel-wheel>=3.1.1.23",
  "plip>=3.0.0",
]

[project.optional-dependencies]
static = ["gemmi>=0.6"]
trajectory = ["mdtraj>=1.9"]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.8",
    "mdanalysisdata>=0.9",
]

[project.urls]
Homepage = "https://github.com/hazlamshamin/MolInspect"
Repository = "https://github.com/hazlamshamin/MolInspect"
Documentation = "https://github.com/hazlamshamin/MolInspect/tree/main/docs"
Issues = "https://github.com/hazlamshamin/MolInspect/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "MDAnalysis"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "MDAnalysis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[tool.uv.extra-build-dependencies]
plip = ["setuptools", "openbabel-wheel"]

[[tool.uv.dependency-metadata]]
name = "plip"
version = "3.0.0"
requires-dist = ["numpy>=1.13.3", "lxml>=4.2.1", "openbabel-wheel>=3.1.1.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
